# cancer-paper-repository

./: .gitignore  CITATION.cff  CONSISTENCY_REPORT.md  CONTRIBUTING.md  Cancer_As_Boundary_Logic_Failure.tex  LICENSE  README.md  RELEASE_CHECKLIST.md  pyproject.toml  requirements-tcga.txt  requirements.txt  run_phase2_extractions.py  run_simulation.py
.github/workflows/: ci.yml
examples/: run_full_scenario.py
experiments/tcga/: README.md  ci_validate_committed_outputs.py  composite_observability_index.py  control_budget_test_results.csv  convergent_validity_ncv.py  convert_thorsson_to_covariates.py  external_validation_geo.py  generate_manuscript_figures.py  master_fdr_results.csv  robustness_check.py  robustness_cox_coefficients.csv  robustness_partial_correlations.csv  robustness_ph_diagnostics.csv  robustness_primary_tests.csv  run_external_validation.py  sensitivity_immune_residualization.py  sensitivity_rmst.py  sensitivity_threshold_sweep.py  survival_logrank_results.csv  sync_manuscript_artifacts.py  tcga_analysis.py  tcga_clinical_discover.py  tcga_clinical_discover2.py  tcga_clinical_discover3.py  tcga_config.py  (+14 more)
main-paper/: figure_provenance.csv
paper/: Cancer_As_Boundary_Logic_Failure.aux  Cancer_As_Boundary_Logic_Failure.out  Cancer_As_Boundary_Logic_Failure.tex  Cancer_As_Boundary_Logic_Failure.toc
results/: README.md  phase2_baseline_seed_sweep.json  phase2_unmasking_seed_sweep.json  scenario_comparison.json  scenario_comparison_metadata.json
src/: __init__.py
tests/: test_core_dynamics.py  test_parameter_profiles.py  test_therapy.py
(+13 files in other folders)
