[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cancer-paper-repository"
version = "0.1.0"
description = "Companion simulation framework for 'Cancer as Boundary Logic Failure'."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "All rights reserved." }
authors = [
  { name = "Moses Rahnama" }
]
keywords = ["cancer", "simulation", "systems-biology", "information-theory", "thermodynamics"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: Other/Proprietary License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = [
  "networkx>=3.0",
  "matplotlib>=3.7",
  "numpy>=1.24",
  "scipy>=1.10",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["core*", "simulations*", "visualization*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
